--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <title>JRodrigues</title>
   </head>
   <body class="dark-blue">
     
     <div class="container">
 
-      <img class="avatar" src="assets/Foto Jessé 3x4.jpg" alt="Image Jesse Rodrigues" />
+      <img class="avatar" src="./assets/Foto Jessé 3x4.jpg" alt="Image Jesse Rodrigues" />
       <h1>Jessé Rodrigues</h1>
       <p class="username">@JRodrigues</p>
 
