add link do whatsApp no projeto

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <img class="avatar" src="./assets/Foto Jessé 3x4.jpg" alt="Image Jesse Rodrigues" />
       <h1>Jessé Rodrigues</h1>
-      <p class="username">@JRodrigues</p>
+      <p class="username">Front-end Developer em Formação</p>
 
       <ul>
         <li>
@@ -42,6 +42,10 @@
 
         <li>
           <a href="https://github.com/Jrodrygues" target="_blank">🐱 Github</a>
+        </li>
+        
+        <li>
+          <a href="https://wa.me/5514991136982" target="_blank">📞 WhatsApp</a>
         </li>
       </ul>
       <footer>
